[package]
name = "monero-p2p"
version = "0.1.0"
edition = "2021"
authors = ["Boog900"]
repository = "https://github.com/Boog900/monero-p2p"
keywords = ["monero"]
license = "MIT"
readme = "README.md"
description = "Rust Monero P2P Library."


[dependencies]
serde = {version = "1.0", features =["derive"]}
serde_with = "1.0"
epee-serde = "0.1.2"
monero = "0.18"
bitflags = "1.3.2"
thiserror = "1.0.24"

